fixtures/errors/object_is_extensible_proxy_invariant.js
const target = {};
Object.preventExtensions(target);

const proxy = new Proxy(target, {
    isExtensible() {
        console.log("isExtensible trap called");
        return true;
    }
});

Object.isExtensible(proxy);
